# fjy1

./: .gitignore  ONLINE_INTEGRATION_GUIDE.md  README.md  start_kimi_stack.ps1  start_kimi_stack.sh
OntoGit/: car_charger_cooling_pump.json  ontogit_tools.sh  probability.sh  start_ontogit.ps1  start_ontogit.sh
OntoGit/agent/: README.md  git_query_agent.py  git_query_tools.py  run_git_query_agent.py  run_git_query_agent.sh  run_git_tool.sh
OntoGit/agent/tests/: test_run_git_query_agent.py
OntoGit/tests/: test_git_query_agent_cli.py
OntoGit/xiaogugit/: manager.py  server.py
Ontology_Factory/WIKI_MG/tests/: test_cli.py
Ontology_Factory/ner/: pyproject.toml
Ontology_Factory/ner/src/ner/: __init__.py  cli.py  cli_support.py  extractor.py  mentions.py  spacy_llm_runtime.py  spacy_llm_support.py
Ontology_Factory/ner/tests/: test_cli_support.py  test_ner_extractor.py  test_spacy_llm_support.py
Ontology_Factory/pipeline/: config.example.yaml  config.local_wiki_verify.yaml
Ontology_Factory/pipeline/tests/: test_pipeline_runner.py  test_pipeline_wiki_runner.py
Ontology_Factory/relation/: pyproject.toml
Ontology_Factory/relation/src/entity_relation/: __init__.py  cli.py  extractor.py  spacy_llm_runtime.py
Ontology_Factory/relation/tests/: test_relation_examples.py  test_relation_extractor.py
Ontology_Factory/resources/spacy_llm/: ner_examples.yml  ner_labels.yml  ner_template.jinja  relation_examples.yml  (+2 more)
Ontology_Factory/xiaogugit/: manager.py
doc/: progress.md
kimi-agent-knowledge-base-collab/app/: package-lock.json  package.json  server.mjs
(+165 files in other folders)
